* 2017.04.15 - moved many generic packages from ck-autotuning here
             - added LLVM 4.0.0 universal package (still need to fix for Linux)

* 2017.04.14 - fixed mingw gfortran detection on Windows (for Caffe)

* 2017.04.11 - improved LLVM description for Android targets

* 2017.03.28 - fixed java detection

* 2017.03.26 - added soft:env.msys2 needed by bazel for Windows (to build TensorFlow, etc)

* 2017.03.24 - added tag modification in deps for host/target OS
             - improved support for customized scripts in packages (to update URLs for ARM/Intel + Win/Linux/MacOS/Android)

* 2017.03.16 - added support for VS2017 Community eddition (cl + clang)
             - added support for PACKAGE_URL_MACOS and PACKAGE_GIT_CHECKOUT_MACOS in universal packages
             - improved universal scripts
             - added soft:compiler.perl (to compile OpenBLAS on Windows)
             - added soft:utils.unix.win (set of Unix Utils on Windows useful to compile OpenBLAS on Windows)

* 2017.03.02 - added VIENNACL_CACHE_PATH to soft:lib.viennacl 
               (now can cache kernels - critical to cache Caffe OpenCL init time by 5x)

* 2017.02.27 - remove equal paths pointed by symbolic links when detecting installed soft

* 2017.02.09 - added "force_cmd_version_detection" and "soft_version_skip_add_target_file"
               to package meta (useful for ARM WA version detection even if taken from GIT)

* 2017.01.17 - added soft:lib.libdnn and moved soft:lib.tiny-dnn here

* 2017.01.08 - many fixes for Caffe deps for Windows/Android

* 2017.01.07 - various fixes for Caffe deps on Windows/Android

* 2017.01.03 - added '--safe' mode to check environment (will first search for CK packages and only then detecting soft)

* 2017.01.01 - added patch.exe (to support compiling Caffe on Windows)

* 2016.12.30 - added installation to env (ck install package:{name} --install_to_env
               or persistently: 'ck setup kernel --var.install_to_env="yes"'
